<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/relativeLayout"
    android:background="@drawable/activity_bg"
    tools:context="marcogino.bluemoto.MainActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_below="@+id/chart"

    android:orientation="horizontal">
<!--
    <SeekBar
        android:id="@+id/volume_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progressbar"
         />
-->

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/Minor"
        android:padding="10dp"

        android:layout_marginTop="10dp"
        android:id="@+id/btPrevDataM"

        android:background="@drawable/button_bg"

        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/minor"
        android:padding="10dp"
        android:layout_toRightOf="@+id/btPrevDataM"
        android:layout_margin="10dp"
        android:id="@+id/btPrevData"

        android:background="@drawable/button_bg"

        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/major"
        android:padding="10dp"
android:layout_toLeftOf="@+id/btPostDataM"
        android:layout_margin="10dp"
        android:id="@+id/btPostData"

        android:background="@drawable/button_bg"

        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/Major"
        android:padding="10dp"

        android:layout_marginTop="10dp"
        android:id="@+id/btPostDataM"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_bg"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Delete DB data"
        android:padding="10dp"

        android:layout_marginTop="30dp"
        android:id="@+id/btDeleteDBdata"
        android:layout_below="@+id/btPostData"
        android:layout_centerInParent="true"
        android:background="@drawable/button_bg"

         />




    </RelativeLayout>


</RelativeLayout>