<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"

android:background="@drawable/activity_bg"
tools:context="marcogino.bluemoto.MainActivity">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/layoutSpinner"

    android:layout_marginBottom="10dp"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select target device:"
        android:layout_gravity="center_vertical"
        android:textSize="16dp"
        android:paddingRight="10dp"
        android:textStyle="bold"

        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonH"
        android:id="@+id/spinnerDevice"

        android:longClickable="false"

        />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"

    android:id="@+id/timeout"
    android:layout_below="@+id/layoutSpinner"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        android:layout_width="@dimen/editText"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopText"
        android:id="@+id/TimeoutToSend"
        android:layout_gravity="clip_vertical"
        android:inputType="number"
        android:maxLength="3"

        />
    <Button

        android:layout_width="@dimen/buttonW"
        android:layout_marginLeft="@dimen/marginRightButton"
        android:layout_marginTop="@dimen/marginRightButton"
        android:layout_height="@dimen/buttonH"
        android:text="@string/btTextSetTimeout"
        android:id="@+id/btTimeout"
        android:background = "@drawable/button_bg"

        android:clickable="true"
        android:onClick="btPressed"/>


</LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/getsetspeed"
        android:layout_below="@+id/speed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="@dimen/buttonW"
            android:layout_marginTop="@dimen/marginRightButton"
            android:text="@string/btTextGetSetActualSpeed"
            android:id="@+id/btGetSetSpeed"
            android:layout_marginRight="@dimen/marginRightButton"
            android:background = "@drawable/button_bg"
            android:onClick="btPressed"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="@dimen/editText"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"


            android:layout_toRightOf="@+id/btGetSetSpeed"
            android:layout_toEndOf="@+id/btGetSetSpeed"

            android:id="@+id/SpeedSetted"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/speed"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/timeout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="@dimen/editText"
            android:layout_gravity="clip_vertical"
            android:layout_marginTop="@dimen/marginTopText"
            android:id="@+id/SpeedToSend"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            />

        <Button
            android:layout_width="@dimen/buttonW"
            android:layout_marginLeft="@dimen/marginRightButton"
            android:layout_marginTop="@dimen/marginRightButton"
            android:text="@string/btTextSetSpeed"
            android:id="@+id/btSetSpeed"
            android:layout_height="@dimen/buttonH"
            android:background = "@drawable/button_bg"
            android:onClick="btPressed"/>


    </LinearLayout>


</RelativeLayout>